--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/lion-simba/purestg2/zipball/2.4" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/lion-simba/purestg2/tarball/2.4" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/lion-simba/purestg2/archive/2.4.zip" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/lion-simba/purestg2/archive/2.4.tar.gz" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/lion-simba/purestg2" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
