Latest release link added, PPA link added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <p>More detailed information can be found in <a href="https://github.com/lion-simba/purestg2/blob/master/README">README</a>.</p>
 
 <p>Discussion in Russian and Ukrainian: <a href="http://local.com.ua/forum/topic/25760-purestg2/">http://local.com.ua/forum/topic/25760-purestg2/</a> </p>
+<p>Latest version: <a href="https://github.com/lion-simba/purestg2/releases/tag/2.4">2.4</a></p>
+<p>Ubuntu packages available: <a href="https://launchpad.net/~lion-simba/+archive/ubuntu/stargazer">https://launchpad.net/~lion-simba/+archive/ubuntu/stargazer</a></p>
         </section>
 
         <footer>
